--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,19 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+.available-balance {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 3em;
+    font-weight: bold;
+    text-align: center;
+}
+
+.card-available-balance {
+}
+
+.card-available-balance-description {
+    font-size: 1em;
+    color: #888888;
+    text-align: center;
+}
