Database and some visuals details implemented. User page eliminated.

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -39,7 +39,10 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #404040,
-  sitamet:    #007063
+  sitamet:    #007063,
+  all:        #007063,
+  deposited:  #007063,
+  spent:      crimson
 );
 
 
