--- a/src/pages/account/account.scss
+++ b/src/pages/account/account.scss
@@ -1,3 +1,28 @@
 page-account {
 
+    ion-content {
+        background-color: #eeeeee;
+    }
+
+}
+
+.data-movement {
+    display: flex;
+    justify-content: space-between;
+}
+
+.balance {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 2.5em;
+    text-align: center;
+}
+
+.card-balance {
+    box-shadow: none !important;
+}
+
+.card-balance-description {
+    font-size: 1em;
+    color: #888888;
+    text-align: center;
 }
