--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,46 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('../assets/fonts/Roboto-Light/Roboto-Light.ttf') format('truetype')
+}
+
+@font-face {
+    font-family: 'Sitamet';
+    src: url('../assets/fonts/Montserrat-bold/montserrat-bold.ttf') format('truetype')
+}
+
+.title {
+    font-family: 'Sitamet';
+    text-transform: uppercase;
+    letter-spacing: .2em;
+}
+
+.title-menu {
+    text-align: right;
+} 
+
+.icon-logo {
+    height: 6em;
+    margin-left: .8em;
+    margin-top: .8em;
+}
+
+.icon-menu {
+    font-size: 2em;
+    font-weight: bold;
+    padding-right: .5em;
+    color: dark;
+}
+
+.item-menu {
+    font-family: 'Roboto';
+    font-weight: bold;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 1em;
+    font-size: 1.3em;
+    color: #404040;
+}
