--- a/src/pages/account/account.scss
+++ b/src/pages/account/account.scss
@@ -1,5 +1,13 @@
 page-account {
 
+    ion-header {
+        ion-navbar {
+            background-color: red;
+            padding: 0;
+            margin: 0;
+        }
+    }
+
     ion-content {
         background-color: #eeeeee;
     }
@@ -11,18 +19,34 @@ page-account {
     justify-content: space-between;
 }
 
+.content-balance {
+    text-align: center;
+    padding: 0 0 .3em 0;
+    margin: 0;
+    color: #555555;
+}
+
 .balance {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Roboto';
     font-size: 2.5em;
     text-align: center;
+    padding: .3em 0 0 0;
+    margin: 0;
 }
 
 .card-balance {
-    box-shadow: none !important;
+    background-color: #fafafa;
+    box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.25);
 }
 
-.card-balance-description {
-    font-size: 1em;
-    color: #888888;
-    text-align: center;
+.button-segment {
+    font-weight: bold;
+}
+
+.segment {
+    font-weight: bold;
+}
+
+.add-button {
+    margin: 1em;
 }
