--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -14,14 +14,21 @@ page-home {
     }
 
     .logo {
-        height: 12em;
+        height: 20em;
     }
+}
+
+@-webkit-keyframes animacion {
+    0% { font-size: 4em }
+    50% { font-size: 7em }
+    100% { font-size: 4em }
 }
 
 .icon-finger-print {
     text-align: center;
     display: block;
     font-size: 4em;
+    -webkit-animation: animacion 2s ease 0 infinite;
 }
 
 .list-access {
