--- a/src/pages/account/account.scss
+++ b/src/pages/account/account.scss
@@ -1,17 +1,24 @@
 page-account {
 
-    ion-header {
-        ion-navbar {
-            background-color: red;
-            padding: 0;
-            margin: 0;
-        }
-    }
-
     ion-content {
         background-color: #eeeeee;
     }
 
+}
+
+.card-movement {
+    padding: .7em;
+    border: 1px solid #dedede;
+    box-shadow: none !important;
+}
+
+.card-movement ion-card-header {
+    text-overflow: ellipsis;
+    text-transform: uppercase;
+}
+
+.card-movements {
+    padding: 0;
 }
 
 .data-movement {
@@ -19,23 +26,45 @@ page-account {
     justify-content: space-between;
 }
 
+.data-movement > .movement-value {
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.data-movement > .movement-date {
+    display: flex;
+    align-items: center;
+}
+
+.movement-value {
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.data-movement > .value-negative {
+    color: crimson;
+}
+
+.data-movement > .value-positive {
+    color: #008172;
+}
+
 .subtitle {
     text-align: center;
     padding: 0 0 .3em 0;
-    margin: 0;
     color: #555555;
 }
 
 .balance {
     font-family: 'Roboto';
-    font-size: 2.5em;
+    font-size: 2em;
     text-align: center;
     padding: .3em 0 0 0;
     margin: 0;
 }
 
 .card-balance {
-    background-color: #f4f4f4;
+    background-color: #f8f8f8;
     box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.25);
 }
 
