--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,7 +1,8 @@
 page-home {
+
     ion-header {
         text-align: center;
-        padding-top: 2em;
+        padding-top: 4em;
     }
 
     ion-slides {
@@ -14,29 +15,28 @@ page-home {
     }
 
     .logo {
-        height: 20em;
+        height: 18em;
     }
 }
 
-@-webkit-keyframes animacion {
-    0% { font-size: 4em }
-    50% { font-size: 7em }
-    100% { font-size: 4em }
-}
-
-.icon-finger-print {
-    text-align: center;
-    display: block;
-    font-size: 4em;
-    -webkit-animation: animacion 2s ease 0 infinite;
+.icon-left-item {
+    padding: 0 1em;
+    color: #404040;
 }
 
 .list-access {
-    margin: 1em 2em;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    color: dark;
 }
 
 .item-access {
-    color: #888888;
-    font-size: .9em;
-    text-align: center;
+    left: 0;
+    bottom: 0;
+    position: absolute;
+    width: 100%;
+    padding-bottom: .5em;
+    padding-top: .5em;
+    border-top: .5px solid #eeeeee;
 }
