Coding the validators. They work but they have some faults. Some changes made in the view.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -57,3 +57,17 @@
     font-size: 1.3em;
     color: #404040;
 }
+
+.form-error-message {
+    color: crimson;
+    font-weight: bold;
+    text-align: justify;
+}
+
+.form-list {
+    margin: 0 2em;
+}
+
+.form-item {
+    padding: 0;
+}
