--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -36,9 +36,10 @@ $app-direction: ltr;
 $colors: (
   primary:    #404040,
   secondary:  #f4f4f4,
+  tertiary:   #4267B2,
   danger:     #f53d3d,
-  deposited:  #008172,
-  spent:      crimson
+  deposited:  #01a57c,
+  spent:      #dc143c
 );
 
 
