Movements with sliding options implemented. Code refactoring is missing.

--- a/src/pages/account/account.scss
+++ b/src/pages/account/account.scss
@@ -92,3 +92,11 @@ page-account {
 .add-button {
     margin: .8em;
 }
+
+.label-md {
+    margin-right: 0;
+}
+
+.item-md.item-block .item-inner {
+    padding-right: 0;
+}
