--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 <ion-menu [content]="content" side="right">
   <ion-header no-border>
     <ion-navbar hideBackButton>
-      <ion-title class="title title-menu">Menu</ion-title>
+      <ion-title class="title title-menu">{{ 'MENU' | translate }}</ion-title>
     </ion-navbar>
   </ion-header>
 
@@ -9,7 +9,7 @@
     <ion-list>
       <ion-item class="item-menu" menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
         <ion-icon class="item-menu-icon" name="{{p.icon}}" item-start></ion-icon>
-        {{p.title}}
+        {{ p.title | translate }}
       </ion-item>
     </ion-list>
   </ion-content>
