--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,19 +1,3 @@
-// http://ionicframework.com/docs/theming/
-
-
-// App Global Sass
-// --------------------------------------------------
-// Put style rules here that you want to apply globally. These
-// styles are for the entire app and not just one component.
-// Additionally, this file can be also used as an entry point
-// to import other Sass files to be included in the output CSS.
-//
-// Shared Sass variables, which can be used to adjust Ionic's
-// default Sass variables, belong in "theme/variables.scss".
-//
-// To declare rules for a specific mode, create a child rule
-// for the .md, .ios, or .wp mode classes. The mode class is
-// automatically applied to the <body> element in the app.
 
 @font-face {
     font-family: 'Roboto';
@@ -25,14 +9,16 @@
     src: url('../assets/fonts/Montserrat-bold/montserrat-bold.ttf') format('truetype')
 }
 
-.title {
-    font-family: 'Sitamet';
-    text-transform: uppercase;
-    letter-spacing: .2em;
+ion-title {
+    font-family: 'Roboto';
+    letter-spacing: .08em;
 }
 
 .title-menu {
     text-align: right;
+    font-family: "Sitamet";
+    text-transform: uppercase;
+    letter-spacing: .2em;
 } 
 
 .icon-logo {
@@ -50,7 +36,7 @@
 
 .item-menu {
     font-family: 'Roboto';
-    font-weight: bold;
+    font-weight: 500;
     display: flex;
     justify-content: space-between;
     padding: 0 1em;
@@ -70,4 +56,8 @@
 
 .form-item {
     padding: 0;
+}
+
+.add-button {
+    margin: .8em;
 }
