--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<ion-menu [content]="content" side="right">
+<ion-menu [content]="content" side="right" type="reveal">
   <ion-header no-border>
     <ion-navbar hideBackButton>
       <ion-title class="title title-menu">{{ 'MENU' | translate }}</ion-title>
