Search bar implemented.

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -86,6 +86,9 @@ $alert-md-button-margin-end: 0;
 $alert-md-button-margin-top: .5em;
 $alert-md-button-margin-bottom: .5em;
 
+// Searchbar
+$searchbar-md-input-box-shadow: none;
+
 // App Windows Variables
 // --------------------------------------------------
 // Windows only Sass variables can go here
